<resources>
    <string name="app_name">Simple Math Quiz</string>
    <string name="numpad_1">1</string>
    <string name="numpad_2">2</string>
    <string name="numpad_3">3</string>
    <string name="numpad_4">4</string>
    <string name="numpad_5">5</string>
    <string name="numpad_6">6</string>
    <string name="numpad_7">7</string>
    <string name="numpad_8">8</string>
    <string name="numpad_9">9</string>
    <string name="numpad_0">0</string>
    <string name="numpad_bksp">←</string>
    <string name="numpad_enter">ENTER</string>

    <string name="instructions_content">
        The computer will randomly generate simple algebraic problems for addition (+), subtraction (-),
        multplication (×), division (÷), and modulus (%). Your goal is to solve them as quickly and as
        correctly as possible. Good luck!
    </string>
</resources>
