<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eagleblitz.morris.simplemathquiz.MainActivity"
    android:background="@drawable/paperbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Question"
        android:id="@+id/questionView"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/scoreView"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:progress="0"
        android:progressTint="#00ff00"
        android:secondaryProgressTint="#ff0000"
        android:secondaryProgress="0"
        android:max="100"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Input"
        android:id="@+id/inputView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/questionView"
        android:textStyle="italic"
        android:textSize="36dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Score"
        android:id="@+id/scoreView"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        android:id="@+id/numpadLayout"
        android:layout_below="@+id/inputView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp">

        <Button
            android:text="@string/numpad_7"
            android:id="@+id/btn_7"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_8"
            android:id="@+id/btn_8"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_9"
            android:id="@+id/btn_9"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_4"
            android:id="@+id/btn_4"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_5"
            android:id="@+id/btn_5"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_6"
            android:id="@+id/btn_6"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_1"
            android:id="@+id/btn_1"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_2"
            android:id="@+id/btn_2"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_3"
            android:id="@+id/btn_3"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/numpad_0"
            android:id="@+id/btn_0"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/numpad_bksp"
            android:id="@+id/btn_bksp"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:text="@string/numpad_enter"
            android:id="@+id/btn_enter"
            android:background="@drawable/numpad_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </GridLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:orientation="horizontal"
        android:id="@+id/miniMenuLayout"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:visibility="invisible">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Play Again"
            android:id="@+id/resetButton"
            android:onClick="reset"
            android:background="@drawable/navigation_button"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Main Menu"
            android:id="@+id/exitButton"
            android:onClick="exit"
            android:background="@drawable/navigation_button"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Statistics"
            android:id="@+id/statsButton"
            android:background="@drawable/navigation_button"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:onClick="viewStats" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Answers"
            android:id="@+id/ansButton"
            android:background="@drawable/navigation_button"
            android:layout_below="@+id/statsButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:onClick="showAnswers" />
    </GridLayout>

</RelativeLayout>
